--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node --enable-source-maps dist/main.js",
-    "build": "nearleyc grammar.ne -o src/grammar.ts && tsc",
+    "build": "nearleyc grammar.ne -o src/grammar.ts && nearleyc intermedlang.ne -o src/imlgrammar.ts && tsc",
     "watch": "tsc -w"
   },
   "dependencies": {
