--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "dist/main.js",
   "license": "MIT",
+  "repository": "https://github.com/SimonFJ20/compiling-to-brainfuck",
+  "author": "SimonFJ20 <simonfromjakobsen@gmail.com>",
   "scripts": {
     "start": "node --enable-source-maps dist/main.js",
-    "build": "nearleyc grammar.ne -o src/grammar.ts && nearleyc intermedlang.ne -o src/imlgrammar.ts && tsc",
+    "build": "nearleyc crustl.ne -o src/crustl_grammar.gen.ts && nearleyc crasm.ne -o src/crasm_grammar.gen.ts && tsc",
     "watch": "tsc -w"
   },
   "dependencies": {
