--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,10 @@
       "outDir": "./dist",
       "pretty": true,
       "rootDir": "./src",
+      "baseUrl": "./src",
       "skipDefaultLibCheck": true,
       "skipLibCheck": true,
       "strict": true,
-      "sourceRoot": "./src",
       "tsBuildInfoFile": ".tsbuildinfo",
       "esModuleInterop": true,
     },
